Refactor command handler and remove OCMCommandCompleter
Merged tab completion logic into OCMCommandHandler and removed the separate OCMCommandCompleter class. Updated command registration to use the new handler for both executor and tab completer. Also standardized command name casing in plugin.yml and improved code style in OCMMain.